@@ -1,3 +1,8 @@
+2009-12-04 Bahadır Kandemir <bahadir@pardus.org.tr>
+		* pisi/scenarioapi/pspec.py: AnyDependency support added to
+		with_dependencies() method. Simply give AnyDependency list as an
+		argument.
+
 2009-11-22 Bahadır Kandemir <bahadir@pardus.org.tr>
 		* pisi/operations/build.py, pisi/index.py: *Size variables should be
 		long, instead of int.
